test/Fail/Issue2350-constructor-parameter-ignored.err
Issue2350-constructor-parameter-ignored.agda:8.18-27: error: [UnequalTerms]
The terms
  D ⦃ ℓ ⦄ _A_13 : Set ℓ
and
  D ⦃ ℓ' ⦄ A : Set ℓ'
are not equal
when checking that the inferred type of an application
  D _A_13
matches the expected type
  D A
